libs/modkit-macros/tests/ui/fail/lifecycle_wrong_third_param.stderr
error: third parameter must be ReadySignal when await_ready=true
 --> tests/ui/fail/lifecycle_wrong_third_param.rs:8:65
  |
8 |     async fn run(&self, _cancel: CancellationToken, _not_ready: u32) {}
  |                                                                 ^^^

warning: unused import: `tokio_util::sync::CancellationToken`
 --> tests/ui/fail/lifecycle_wrong_third_param.rs:2:5
  |
2 | use tokio_util::sync::CancellationToken;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
